--- a/.github/workflows/provision_cluster.yml
+++ b/.github/workflows/provision_cluster.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: '${{ secrets.AWS_USER_AK }}'
-          aws-secret-access-key: '${{ secrets.AWS_USER_SK }}'
-          aws-region: us-east-1
+          aws-access-key-id: '${{ secrets.AWS_ACCESS_KEY_ID }}'
+          aws-secret-access-key: '${{ secrets.AWS_SECRET_ACCESS_KEY }}'
+          aws-region: '${{ secrets.AWS_REGION }}'
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
